syntax = "proto3";

package server;

option go_package = "mocha-agent/proto";

message Plugin {
    string name = 1;
    string version = 2;
    string url = 3;
}

message ServerConfig {
    string server_name = 1;
    string server_type = 2;
    int32 max_players = 3;
    string difficulty = 4;
    string game_mode = 5;
    int32 view_distance = 6;
    int32 spawn_protection = 7;
    string seed = 8;
    string world_type = 9;
    bool generate_structures = 10;
    int32 memory = 11;
    int32 port = 12;
}

message ProvisionRequest {
    string server_id = 1;
    string minecraft_version = 2;
    ServerConfig config = 3;
    repeated Plugin plugins = 4;
}

message ServerActionRequest {
    string instance_id = 1;
    string script_path = 2;
}

message ServerActionResponse {
    string message = 1;
}

message UpdatePluginsRequest {
    string instance_id = 1;
    repeated Plugin plugins = 2;
}

message UpdatePluginsResponse {
    string message = 1;
}

message ServerStatusResponse {
    string instance_id = 1;
    string status = 2;
    string message = 3;
}

service ServerManager {
    rpc ProvisionServer(ProvisionRequest) returns (ServerActionResponse) {}
    rpc StartServer(ServerActionRequest) returns (ServerActionResponse) {}
    rpc StopServer(ServerActionRequest) returns (ServerActionResponse) {}
    rpc DeleteServer(ServerActionRequest) returns (ServerActionResponse) {}
    rpc UpdatePlugins(UpdatePluginsRequest) returns (UpdatePluginsResponse) {}
    rpc GetServerStatus(ServerActionRequest) returns (ServerStatusResponse) {}
} 